data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_540.wast
;; 1. **Test Description**: Create a loop with a `br_if` instruction that checks for a condition on the operand stack to break the loop, intentionally setting the condition to `false` always to check if the loop runs infinitely.    **Constraint Checked**: Correct handling of the `br_if` condition and the proper decrement of loop iterations.    **Relation to Infinite Loops**: Ensures that incorrect `br_if` evaluation does not result in an infinite loop.

(assert_invalid
  (module
    (func $loop_with_br_if
      (i32.const 0)
      (loop (result i32)
        (br_if 0 (i32.const 0))
      )
    )
  )
  "loop with br_if always false causing infinite loop"
)